# ais-kadaster-mcp

./: .env  .env.example  .gitignore  POC.md  README.md  kadaster.py  kadaster_non_empty_results.json  pyproject.toml
.gemini/: settings.json
ais_kadaster_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/result/: dr_zamenhoflaan_224.md
notebooks/: fewshot_judge.ipynb  kadaster_insights.ipynb  kadaster_summary.csv
notebooks/.ipynb_checkpoints/: kadaster_insights-checkpoint.ipynb
notebooks/notebooks/: judge_cache.jsonl
scripts/: collect_non_empty.py  collect_rdf.py  kadaster.py  mcp_server.py
