[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ais-kadaster-mcp"
version = "0.1.0"
description = "Kadaster query catalog + SPARQL execution extractor script"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=0.1.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.2.0",
  "requests>=2.32.0",
]

[project.scripts]
kadaster-extract = "scripts.kadaster:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.uv]
dev-dependencies = [
  "ipykernel>=7.0.0",
  "matplotlib>=3.10.0",
  "notebook>=7.5.0",
  "openai>=2.15.0",
  "pandas>=2.3.0",
  "ruff>=0.14.0",
  "seaborn>=0.13.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
